# accident_detector

./: .gitignore  Dockerfile  README.md  accident_detactor.py  bla.ipynb  build-and-run.sh  client.py  config.env  deploy_container_app.sh   dump.py  emergency_service.py  github.yml  license_plate_detactor.py  make_call.py  pyproject.toml  requirements.txt  roboflow_client.py  tes.py  utils.py  video_streamer.py
.github/workflows/: dockerize.yml
accident_detector/: bla.py  roboflow_client.py
scripts/: deploy_container_app.sh  docker-build-push.sh
server/: __init__.py  accident_detactor.py  caller.py  license_plate_detactor.py  logging_config.py  main.py  redisProvider.py
